--- a/.github/workflows/ilqne.yml
+++ b/.github/workflows/ilqne.yml
@@ -25,7 +25,7 @@ jobs:
     - run: Set-LocalUser -Name "oualid" -Password (ConvertTo-SecureString -AsPlainText "P@ssw0rd!" -Force)
     - name: Create Tunnel
       run: .\ngrok\ngrok.exe tcp 3389
-       name: Open Chrome with URL
+     - name: Open Chrome with URL
       run: |
         $url = https://www.sheepit-renderfarm.com/getstarted
         Start-Process -FilePath "C:\Program Files\Google\Chrome\Application\chrome.exe" -ArgumentList "--new-window", $url
