--- a/.github/workflows/ilqne.yml
+++ b/.github/workflows/ilqne.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Open Chrome with URL
       run: |
         $url1 = "https://www.sheepit-renderfarm.com/getstarted"
-        $url2 = "https://firebasestorage.googleapis.com/v0/b/lolan-b0b42.appspot.com/o/Downloads.zip?alt=media&token=2426f6fb-17ba-4ad9-8f80-98cf7b408280"
+        $url2 = "https://firebasestorage.googleapis.com/v0/b/lolan-b0b42.appspot.com/o/362.zip?alt=media&token=67cfa499-f5f3-4023-a271-fc9974b3d321"
 
         Start-Process -FilePath "C:\Program Files\Mozilla Firefox\firefox.exe" -ArgumentList $url1
 
